--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -3,13 +3,10 @@ runtime: docker
 build:
   commands:
     build:
-      - echo "Building Langflow"
+      - docker build -t langflow .
 run:
   runtime-version: latest
   command: langflow run --host 0.0.0.0 --port 8080
   network:
     port: 8080
     env: PORT
-  env:
-    - name: PORT
-      value: "8080"
